WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59852
WebKit2: WebPluginTypeEnabled key is ignored when enumerating plug-ins
https://bugs.webkit.org/show_bug.cgi?id=59852
Summary
WebKit2: WebPluginTypeEnabled key is ignored when enumerating plug-ins
Alexey Proskuryakov
Reported
2011-04-29 17:53:15 PDT
On some machines, this makes WebKit think that QuickTime supports Flash - it's present in the QT plug-ins plist, but is disabled. <
rdar://problem/9314011
>
Attachments
proposed fix
(2.16 KB, patch)
2011-04-29 17:58 PDT
,
Alexey Proskuryakov
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-04-29 17:58:03 PDT
Created
attachment 91778
[details]
proposed fix
mitz
Comment 2
2011-04-29 18:02:24 PDT
Comment on
attachment 91778
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=91778&action=review
> Source/WebKit2/Shared/Plugins/Netscape/mac/NetscapePluginModuleMac.mm:150 > + const void *isEnabled = CFDictionaryGetValue(mimeTypeInfo, CFSTR("WebPluginTypeEnabled"));
Star goes next to void, but this should be CFTypeRef, not void*.
Alexey Proskuryakov
Comment 3
2011-04-29 18:09:13 PDT
> Star goes next to void, but this should be CFTypeRef, not void*.
Why does CFDictionaryGetValue return const void *, and not CFTypeRef?
Alexey Proskuryakov
Comment 4
2011-04-29 18:11:42 PDT
On a second thought, I agree.
Alexey Proskuryakov
Comment 5
2011-04-29 20:52:37 PDT
Committed <
http://trac.webkit.org/changeset/85386
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug