        Reviewed by Simon Fraser and Dan Bernstein.

WebKit2: WebPluginTypeEnabled key is ignored when enumerating plug-ins
        https://bugs.webkit.org/show_bug.cgi?id=59852
        <rdar://problem/9314011>

        * Shared/Plugins/Netscape/mac/NetscapePluginModuleMac.mm:
        (WebKit::getPluginInfoFromPropertyLists): Do what WebKit1 does (but in CF dialect). And yes,
        I've seen plists with both numbers and booleans used .



Canonical link: https://commits.webkit.org/75091@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85386 268f45cc-cd09-0410-ab3c-d52691b4dbfc